--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -87,8 +87,11 @@ button {
 	width: 100%;
 	min-height: 1000px;
 	background: #ddd;
-	padding-top: 300px;
 	opacity: 0.8;
+}
+#msg img.loading {
+	margin-top: 450px;
+	margin-left: 70px;
 }
 
 #menu {
@@ -97,6 +100,8 @@ button {
 	top: 90px;
 	left: 0;
 	width: 100%;
+	height: 100%;
+	min-height: 1200px;
 	background: #eee;
 	padding: 1em 0 30em;
 }
