--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -23,6 +23,7 @@
 body {
 	font-family: 'PTSansRegular', Arial, sans-serif;
 	margin: 0;
+	background: #e9e9e9;
 }
 ul {
 	list-style: none;
@@ -37,6 +38,7 @@ button, input, select, textarea {
     vertical-align: baseline;
     *vertical-align: middle;
 }
+button:hover { cursor: pointer }
 
 /* 
 
@@ -71,12 +73,20 @@ select {
 	font-size: 1.3em;
 }
 button {
-	margin: 0.5em 0 0.5em;
-	background: #777;
+	margin: 0.5em 0;
+	padding: 0.5em 1em;
 	color: #fff;
-	-webkit-border-radius: 6px;
-	-moz-border-radius: 6px;
-	border-radius: 6px;
+	font-size: 1.3em;
+	border: none;
+	-webkit-border-radius: 0.3em;
+	-moz-border-radius: 0.3em;
+	border-radius: 0.3em;
+	background: #777;
+	/*
+	-moz-box-shadow: 1px 1px 1px 1px #aaa;
+	-webkit-box-shadow: 1px 1px 1px 1px #aaa;
+	box-shadow: 1px 1px 1px 1px #aaa;
+	*/
 }
 
 #msg {
@@ -97,12 +107,12 @@ button {
 #menu {
 	display: none;
 	position: absolute;
-	top: 90px;
+	top: 87px;
 	left: 0;
 	width: 100%;
 	height: 100%;
 	min-height: 1200px;
-	background: #eee;
+	background: #476a94;
 	padding: 1em 0 30em;
 }
 #menu > div {
@@ -111,33 +121,44 @@ button {
 }
 #menu button {
 	width: 100%;
-	margin: 0.3em 0;
-	font-size: 1.3em;
-	padding: 0.5em 1em;
 	color: #222;
-}
-#menu button:hover {
-	cursor: pointer;
+	background: #eee;
 }
 #menu button.account {
 	background: #d6d6f3;
 }
+#menu button.account:hover, #menu button.account:active {
+	background: #bfbfe9;
+}
 #menu button.shortcut {
 	background: #c5f79d;
 }
+#menu button.shortcut:hover, #menu button.shortcut:active {
+	background: #a4d57c;
+}
+
 
 button.save {
 	font-size: 1.6em;
 	padding: 1.5em 0.5em;
 	background: #008C00;
 }
+button.save:hover, button.save:active {
+	background: #026602;
+}
 button.cancel {
 	padding: 0.75em 0.5em;
 	background: #A8A800;
 }
+button.cancel:hover, button.cancel:active {
+	background: #797900;
+}
 button.delete {
 	padding: 0.5em;
 	background: #B20000;
+}
+button.delete:hover, button.delete:active {
+	background: #850101;
 }
 
 
@@ -152,7 +173,7 @@ ul.transactions.short {
 }
 ul.transactions.short li.date {
 	/* background: #e4eef0; */
-	color: #aaa;
+	color: #888;
 	font-size: 0.8em;
 	margin: 0;
 	padding: 0.2em 0 0 0.8em;
@@ -161,10 +182,13 @@ ul.transactions.short li.transaction {
 	font-size: 1.3em;
 	padding: 0.4em 0.4em 0.1em 0.4em;
 	margin-bottom: 0.7em;
-	background-color: #efefef;
+	background-color: #fff;
 	-webkit-border-radius: 6px;
 	-moz-border-radius: 6px;
 	border-radius: 6px;
+}
+ul.transactions.short li.transaction:hover {
+	cursor: pointer;
 }
 ul.transactions.short li.transaction div.payee {
 	float: left;
@@ -187,6 +211,9 @@ div.transaction-details > div {
 div.transaction-details input, div.transaction-details button, div.transaction-details textarea {
 	font-size: 1.3em;
 	width: 100%;
+}
+div.transaction-details input, div.transaction-details textarea {
+	padding: 0.2em 0.2em;
 }
 div.transaction-details input[type=radio] {
 	width: 1em;
